--- a/Source/Solution/CogentCms.WebPublic/Views/Home/Index.cshtml
+++ b/Source/Solution/CogentCms.WebPublic/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@ else
     {
         <article>
             <h1>@blogPost.Title</h1>
-            <div>@blogPost.Body</div>
+            <div>@Html.Raw(blogPost.Body)</div>
         </article>
     }
 }
