--- a/Source/Solution/CogentCms.WebPublic/Views/Shared/_Layout.cshtml
+++ b/Source/Solution/CogentCms.WebPublic/Views/Shared/_Layout.cshtml
@@ -2,8 +2,10 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
+
+    <link rel="stylesheet" href="~/css/CogentCms.css"/>
 </head>
 <body>
     <div>
