--- a/Source/Solution/CogentCms.WebPublic/wwwroot/css/CogentCms.css
+++ b/Source/Solution/CogentCms.WebPublic/wwwroot/css/CogentCms.css
@@ -71,7 +71,12 @@ article {
 article h1 {
     font-weight: bold;
     font-size: 1.5em;
-    margin: 0px 0px 1em 0px;
+    margin: 0px 0px 0.5em 0px;
+}
+
+article .post-meta {
+    font-size: 1em;
+    margin: 0px 0px 1.5em 0px;
 }
 
 article p {
