Added basic blog post editing and some basic responsive styles

--- a/Source/Solution/CogentCms.WebAdmin/Views/Blog/Detail.cshtml
+++ b/Source/Solution/CogentCms.WebAdmin/Views/Blog/Detail.cshtml
@@ -7,6 +7,10 @@
     </div>
 </article>
 
+<div>
+    @Html.ActionLink("Edit Post", "Edit", "Blog", new {id = Model.BlogPost.BlogPostId})
+</div>
+
 @if (!Model.BlogPost.PublishDate.HasValue)
 {
 <div>
