--- a/Source/Solution/CogentCms.WebPublic/Views/Shared/_Layout.cshtml
+++ b/Source/Solution/CogentCms.WebPublic/Views/Shared/_Layout.cshtml
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="~/css/CogentCms.css"/>
 </head>
 <body>
-    <div>
-        @RenderBody()
-    </div>
+    <main>
+        <div class="container">
+            @RenderBody()
+        </div>
+    </main>
 </body>
 </html>
