Added ViewComponent for Google Analytics tag

--- a/Source/Solution/CogentCms.WebPublic/Views/Shared/_Layout.cshtml
+++ b/Source/Solution/CogentCms.WebPublic/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title</title>
 
     <link rel="stylesheet" href="~/css/CogentCms.css"/>
+
+    @await Component.InvokeAsync("GoogleAnalyticsTag")
 </head>
 <body>
     <main>
